--- a/config/ui/templates/list.html
+++ b/config/ui/templates/list.html
@@ -25,9 +25,10 @@
             <table id="sample-table-1" class="table table-striped table-bordered table-hover">
                 <thead>
                 <tr>
-                    <th>Key</th>
-                    <th>Value</th>
+                    <th width="20%">Key</th>
+                    <th width="50%">Value</th>
                     <th>更新时间</th>
+                    <th>创建时间</th>
                     <th>操作</th>
                 </tr>
                 </thead>
@@ -39,8 +40,9 @@
                     <td>
                         <a href="/edit/{{ v.K }}">{{ v.K }}</a>
                     </td>
-                    <td>{{ v.String() }}</td>
-                    <td>{{ v.Timestamp }}</td>
+                    <td>{{ v.String|cut:"100" }}</td>
+                    <td>{{ v.Metadata.updated_at }}</td>
+                    <td>{{ v.Metadata.created_at }}</td>
                     <td>
                         <div class="hidden-phone visible-desktop btn-group">
                             <button class="btn btn-mini btn-info" data-rel="tooltip" title="修改">
